--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,2 +1,12 @@
 <h1><%= @task.title %></h1>
-<p> <%= @task.details %> </p>
+
+<p><%= @task.details %></p>
+
+<% if @task.completed %>
+  <i class="fas fa-check-square"></i> This task is completed
+<% else %>
+  <i class="fas fa-square"></i> This task is not completed yet
+<% end %>
+
+<hr>
+<p><%= link_to "Back to list", tasks_path %> </p>
