--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -15,7 +15,7 @@
 
 
 
- <% if false %>
+<!--  <% if false %>
 
 <ul id="tasks">
   <% @tasks.each do |task| %>
@@ -40,6 +40,6 @@
   <i class="fa fa-plus"></i> Add a new task
 <% end %>
 
-<% end %>
+<% end %> -->
 
 
