--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,3 +1,8 @@
+<%= link_to edit_path(@task.id), class: 'btn btn-default' do %>
+  <i class="far fa-edit"></i> Edit this task
+<% end %>
+
+
 <h1><%= @task.title %></h1>
 
 <p><%= @task.details %></p>
@@ -9,4 +14,7 @@
 <% end %>
 
 <hr>
-<p><%= link_to "Back to list", tasks_path %> </p>
+<%= link_to tasks_path do %>
+  <i class="fas fa-backward"></i> Back to list
+<% end  %>
+
