--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,6 +3,11 @@
   <% @tasks.each do |task| %>
     <li>
       <%= link_to task.title, task_path(task) %> <%= check_box("task", task.id, {checked: task.completed}) %>
+      <%= link_to task_path(task),
+            method: :delete,
+            data: { confirm: "Are you sure?" } do %>
+            <i class="fas fa-trash-alt"></i>
+      <% end %>
     </li>
   <% end %>
 </ul>
