--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to edit_path(@task.id), class: 'btn btn-default' do %>
+<%= link_to edit_task_path(@task.id), class: 'btn btn-default' do %>
   <i class="far fa-edit"></i> Edit this task
 <% end %>
 
