gem bootstrap installed

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -12,6 +12,10 @@
   <% end %>
 </ul>
 
+<%= link_to new_task_path do %>
+  <i class="fas fa-plus"></i></i> Add a new task
+<% end %>
+
 
 
 <!-- https://code.i-harness.com/en/q/cfc5aa -->
