--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,8 +1,8 @@
-<h1>New task</h1>
+
 <hr>
 
 <div class="form-group">
-  <%= form_for(@task) do |f| %>
+  <%= simple_form_for(@task) do |f| %>
     <%= f.label :title %>
     <%= f.text_field :title, class: 'form-control' %>
 </div>
