--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,23 +1,6 @@
-<h1>New task</h1>
-<hr>
+<h1>Edit task</h1>
 
-<div class="form-group">
-  <%= form_for(@task) do |f| %>
-    <%= f.label :title %>
-    <%= f.text_field :title, class: 'form-control' %>
-</div>
-
-<div class="form-group">
-  <%= f.label :details %>
-  <%= f.text_area :details, class: 'form-control' %>
-</div>
-
-
-    <%= f.label :completed %>
-    <%= f.check_box :completed %>
-<hr>
-    <%= f.submit class: "btn btn-primary"%>
-<% end %>
+<%= render 'form', task: @task %>
 
 <hr>
 <%= link_to tasks_path do %>
