--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,16 +1,13 @@
-
-<hr>
-
-<div class="form-group">
-  <%= simple_form_for(@task) do |f| %>
+<%= form_for(@task) do |f| %>
+  <div class="form-group">
     <%= f.label :title %>
     <%= f.text_field :title, class: 'form-control' %>
-</div>
+  </div>
 
-<div class="form-group">
-  <%= f.label :details %>
-  <%= f.text_area :details, class: 'form-control' %>
-</div>
+  <div class="form-group">
+    <%= f.label :details %>
+    <%= f.text_area :details, class: 'form-control' %>
+  </div>
 
   <% unless f.object.new_record? %>
     <div class="checkbox">
@@ -20,5 +17,5 @@
     </div>
   <% end %>
 
-    <%= f.submit class: "btn btn-primary"%>
+  <%= f.submit class: 'btn btn-primary' %>
 <% end %>
